--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "axios": "^1.4.0",
+    "react-router-dom": "^6.14.1",
+    "sweetalert2": "^11.7.12"
   },
   "scripts": {
     "start": "react-scripts start",
