--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hero-company",
   "version": "0.1.0",
+  "homepage": "https://Semogs.github.io/Heroes-Company-UI",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
